sysyruntimelibrary-master/functional_test/13_and.err
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/13_and.sy:6:10: error: syntax error, unexpected AND
6| 	if ( a &&
 |           ^
before semantic ast:
 decList()
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/13_and.sy:0:0: error: not find main function
